# rezen

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CURSOR_DOCKER_GUIDE.md  DOCKER_README.md  DOCUMENTATION_SUMMARY.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASING.md  REZEN_FIX.md  SECURITY.md  STYLE_GUIDE.md  UPGRADE_SUMMARY.md  docker-compose.yml  find_teams_source.py  get_my_team_agents.py  get_team_agents.py  get_team_agents_by_team.py  github-workflows-task-list.md  index.html  michael_perry_commissions_final.py  mkdocs.yml  my_team_agents.json  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  security-audit-docs.json  security-audit-project.json  security-audit-requirements-dev.json  security-audit-requirements.json  sitemap.xml  team_agents_summary.py  vercel.json
.cursor/skills/python-api-client-planning/: SKILL.md  examples.md  reference.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-netlify.yml  docs.yml  release.yml  security-audit.yml  unified-deployment.yml
STYLE_GUIDE/: index.html
_includes/: index.html
_includes/api-coverage/: index.html
_includes/description/: index.html
_includes/features/: index.html
_includes/installation/: index.html
_includes/quick-start/: index.html
agents/: sample_agent.py  transaction_monitor.py
api/: index.html
api-reference/: index.html
api/agents/: index.html
api/checklist/: index.html
api/directory/: index.html
api/documents/: index.html
api/teams/: index.html
api/transaction-builder/: index.html
api/transactions/: index.html
api/users/: index.html
changelog/: index.html
contributing/: index.html
deployment/: index.html
development/: index.html
development/contributing/: index.html
development/deployment/: index.html
docs/: README.md  STYLE_GUIDE.md  api-reference.md  changelog.md  contributing.md  deployment.md  development.md  examples.md  index.md  installation.md  quickstart.md  requirements.txt  troubleshooting.md
docs/_includes/: README.md  api-coverage.md  description.md  features.md  installation.md  quick-start.md
docs/api/: agents.md  checklist.md  directory.md  documents.md  dropbox.md  index.md  teams.md  transaction-builder.md  transactions.md  users.md
docs/development/: contributing.md  deployment.md  index.md
docs/development/consistency/: index.md  repo-gap-map.md
docs/getting-started/: authentication.md  index.md  installation.md  quickstart.md
docs/guides/: agents-and-teams.md  cookbook.md  examples.md  faq.md  index.md  migration.md  performance.md  testing.md  transactions.md  troubleshooting.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js  mathjax.js
docs/reference/: changelog.md  data-types.md  exceptions.md  index.md
docs/stylesheets/: extra.css
docs/workflows/: agents.md  authentication.md  error-handling.md  teams.md  testing.md  transaction-builder.md  transactions.md
docs_extensions/: __init__.py  collapsible_tables.py
examples/: checklist_document_upload.py  create_transaction_minimal.py  dataclass_usage.py  dropbox_integration_example.py  index.html  simple_dataclass_example.py  upload_to_checklist_via_dropbox.py  working_checklist_example.py  working_owner_agent_example.py  working_transaction_example.py
getting-started/: index.html
getting-started/authentication/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/agents-and-teams/: index.html
guides/examples/: index.html
guides/transactions/: index.html
guides/troubleshooting/: index.html
includes/abbreviations/: index.html
installation/: index.html
javascripts/: extra.js
quickstart/: index.html
reference/: index.html
reference/changelog/: index.html
reference/data-types/: index.html
reference/exceptions/: index.html
rezen/: __init__.py  agents.py  api_keys.py  auth.py  base_client.py  checklist.py  client.py  directory.py  documents.py  dropbox.py  enums.py  exceptions.py  mfa.py  models.py  rev_share.py  teams.py  transaction_builder.py  transactions.py  users.py
scripts/: bump_version.py  deploy_docs.sh  sync_docs.py
search/: search_index.json
stylesheets/: extra.css
tasks/: agents_endpoints.md  directory_endpoints.md  docs.md  live_endpoint_testing.md  transaction_builder_endpoints.md
tests/: __init__.py  test_agents.py  test_api_keys.py  test_auth.py  test_auth_headers.py  test_base_client.py  test_checklist.py  test_client.py  test_client_auth_integration.py  test_directory.py  test_documents.py  test_dropbox.py  test_end_to_end_listing.py  test_exceptions.py  test_mfa.py  test_models.py  test_rev_share.py  test_sync_security_dependency_versions.py  test_teams.py  test_transaction_builder.py  test_transactions.py  test_users.py
tools/: sync_security_dependency_versions.py
troubleshooting/: index.html
